--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -416,7 +416,7 @@ buildvariants:
   run_on:
   - "windows-64-vs2013-test"
   expansions:
-    fetch_npm_tarball: node-v7.9.0-win-x64.7z
+    fetch_npm_tarball: node-v7.9.0-win-x64.zip
     node_path: "$(pwd)/.deps"
     num_cores: $(grep -c ^processor /proc/cpuinfo)
     add_env_appdata: Z:\
@@ -430,7 +430,7 @@ buildvariants:
   run_on:
   - "windows-64-vs2013-test"
   expansions:
-    fetch_npm_tarball: node-v7.9.0-win-x64.7z
+    fetch_npm_tarball: node-v7.9.0-win-x64.zip
     node_path: "$(pwd)/.deps"
     num_cores: $(grep -c ^processor /proc/cpuinfo)
     add_env_appdata: Z:\
@@ -444,7 +444,7 @@ buildvariants:
   run_on:
   - "windows-64-vs2013-test"
   expansions:
-    fetch_npm_tarball: node-v7.9.0-win-x64.7z
+    fetch_npm_tarball: node-v7.9.0-win-x64.zip
     node_path: "$(pwd)/.deps"
     num_cores: $(grep -c ^processor /proc/cpuinfo)
     add_env_appdata: Z:\
