--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -332,7 +332,9 @@ tasks:
     params:
       working_dir: src
       script: |
-        sudo apt-get -y install libsecret-1-0
+        set -ev
+        wget https://github.com/mongodb-js/node-keytar/releases/download/v3.0.0/libsecret-1.so.0
+        cp ./libsecret-1.so.0 /usr/lib/libsecret-1.so.0
     variants:
       - ubuntu-compass
       - ubuntu-compass-community
