Add more debug for ubuntu

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -291,6 +291,9 @@ tasks:
           --url "https://nodejs.org/download/release/v7.9.0/${fetch_npm_tarball}"
         cd .deps
         tar xzf ${fetch_npm_tarball} --strip-components=1
+        ls -la
+        echo $PATH
+        npm
 
         chmod +x npm.cmd || true
     variants:
