--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -324,6 +324,7 @@ tasks:
         mv node-v7.9.0-win-x64/* .
         rm -rf node-v7.9.0-win-x64
         ls -la
+        export PATH="${node_path}:$PATH"
         echo $PATH
         npm
 
@@ -363,7 +364,7 @@ tasks:
       script: |
         set -ev
         wget https://github.com/mongodb-js/node-keytar/releases/download/v3.0.0/libsecret-1.so.0
-        cp ./libsecret-1.so.0 /usr/local/lib/libsecret-1.so.0
+        sudo cp ./libsecret-1.so.0 /usr/lib/libsecret-1.so.0
     variants:
       - ubuntu-compass
       - ubuntu-compass-community
