--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -357,7 +357,7 @@ tasks:
       working_dir: src
       script: |
         set -ev
-        apt-get install -y libsecret-1-dev
+        sudo apt-get install -y libsecret-1-dev
     variants:
       - ubuntu-compass
       - ubuntu-compass-community
