--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -347,7 +347,7 @@ tasks:
       working_dir: src
       script: |
         set -ev
-        yum localinstall ftp://mirror.switch.ch/pool/4/mirror/fedora/linux/releases/test/27_Beta/Everything/x86_64/os/Packages/l/libgcrypt-1.8.0-1.fc27.i686.rpm
+        yum localinstall ftp://mirror.switch.ch/pool/4/mirror/fedora/linux/releases/test/27_Beta/Everything/x86_64/os/Packages/l/libgcrypt-1.8.0-1.fc27.x86_64.rpm
         yum localinstall ftp://mirror.switch.ch/pool/4/mirror/fedora/linux/releases/test/27_Beta/Everything/x86_64/os/Packages/l/libsecret-0.18.5-5.fc27.x86_64.rpm
     variants:
       - rhel-compass
