--- a/package.json
+++ b/package.json
@@ -208,8 +208,8 @@
     "@mongodb-js/compass-license": "^0.1.0",
     "@mongodb-js/compass-query-history": "^2.2.0",
     "@mongodb-js/compass-security": "^0.1.0",
-    "@mongodb-js/compass-serverstats": "^11.1.0",
     "@mongodb-js/compass-server-version": "^1.1.0",
+    "@mongodb-js/compass-serverstats": "^11.1.0",
     "@mongodb-js/compass-ssh-tunnel-status": "^1.1.0",
     "@mongodb-js/compass-status": "^2.1.0",
     "ampersand-collection": "^1.5.0",
@@ -239,6 +239,7 @@
     "hadron-app-registry": "^7.1.0",
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
+    "hadron-document": "^4.0.0",
     "hadron-ipc": "^0.0.7",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
