--- a/package.json
+++ b/package.json
@@ -286,7 +286,7 @@
     "react-fontawesome": "^1.6.1",
     "react-select": "1.0.0-rc.5",
     "react-tooltip": "^3.2.6",
-    "react-virtualized": "^9.6.1",
+    "react-virtualized": "9.18.3",
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
