--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-serverstats",
@@ -67,6 +68,7 @@
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
@@ -93,6 +95,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-serverstats",
@@ -119,6 +122,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-serverstats",
@@ -204,6 +208,7 @@
     "@mongodb-js/compass-connect": "^2.0.1",
     "@mongodb-js/compass-crud": "^2.0.10",
     "@mongodb-js/compass-deployment-awareness": "^5.1.0",
+    "@mongodb-js/compass-import-export": "/Users/modetojoy/work/mongodb-js/compass-import-export",
     "@mongodb-js/compass-document-validation": "^7.2.0",
     "@mongodb-js/compass-license": "^0.1.0",
     "@mongodb-js/compass-query-history": "^2.2.0",
