--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
@@ -70,6 +71,7 @@
             "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
             "node_modules/@mongodb-js/compass-status"
@@ -95,6 +97,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
@@ -121,6 +124,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
@@ -205,6 +209,7 @@
     "@mongodb-js/compass-crud": "^3.0.0",
     "@mongodb-js/compass-deployment-awareness": "^5.1.0",
     "@mongodb-js/compass-document-validation": "^7.2.0",
+    "@mongodb-js/compass-instance": "0.0.2",
     "@mongodb-js/compass-license": "^0.1.0",
     "@mongodb-js/compass-query-history": "^2.2.0",
     "@mongodb-js/compass-security": "^0.1.0",
@@ -243,7 +248,7 @@
     "hadron-plugin-manager": "^5.3.0",
     "hadron-react-bson": "^1.4.0",
     "hadron-react-buttons": "^1.5.0",
-    "hadron-react-components": "^1.11.0",
+    "hadron-react-components": "^1.14.1",
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
@@ -261,8 +266,8 @@
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
-    "mongodb-instance-model": "^7.0.0",
     "mongodb-index-model": "^2.0.1",
+    "mongodb-instance-model": "^7.0.0",
     "mongodb-js-metrics": "^3.0.0",
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
