--- a/src/internal-plugins/home/package.json
+++ b/src/internal-plugins/home/package.json
@@ -6,5 +6,8 @@
   "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
-  "main": "./index.js"
+  "main": "./index.js",
+  "dependencies": {
+    "hadron-react-components": "^1.14.0"
+  }
 }
