--- a/package.json
+++ b/package.json
@@ -309,13 +309,13 @@
     "chai-as-promised": "^5.1.0",
     "chai-enzyme": "^0.8.0",
     "devtron": "^1.4.0",
-    "electron": "1.7.11",
+    "electron": "1.8.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-mocha": "^3.3.0",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^2.5.1",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^18.0.0",
+    "hadron-build": "^19.0.0",
     "hadron-spectron": "^1.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
@@ -332,8 +332,8 @@
     "check"
   ],
   "engines": {
-    "node": "^7.9.0",
-    "npm": "^4.0.0 || ^5.0.0"
+    "node": "^8.2.1",
+    "npm": "^5.0.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
