--- a/package.json
+++ b/package.json
@@ -321,6 +321,7 @@
     "mgeneratejs": "^0.2.0",
     "mocha": "^3.1.2",
     "mock-require": "^2.0.1",
+    "mongodb-download-url": "^0.3.3",
     "mongodb-js-precommit": "^0.3.0",
     "mongodb-runner": "^3.6.1",
     "react-test-renderer": "^15.6.1",
