--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
           "plugins-directory": ".mongodb/compass/plugins",
           "plugins": [
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
@@ -67,6 +68,7 @@
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
@@ -88,6 +90,7 @@
           "readonly": true,
           "plugins": [
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
@@ -115,6 +118,7 @@
           "lockdown": true,
           "plugins": [
             "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
@@ -207,10 +211,11 @@
     "@mongodb-js/compass-auth-x509": "^0.1.0",
     "@mongodb-js/compass-collection-stats": "^2.0.1",
     "@mongodb-js/compass-connect": "^2.0.2",
-    "@mongodb-js/compass-crud": "^3.0.3",
+    "@mongodb-js/compass-crud": "^3.1.5",
     "@mongodb-js/compass-deployment-awareness": "^5.1.1",
     "@mongodb-js/compass-document-validation": "^7.2.1",
-    "@mongodb-js/compass-instance": "0.0.2",
+    "@mongodb-js/compass-instance": "^0.0.2",
+    "@mongodb-js/compass-import-export": "^0.0.3",
     "@mongodb-js/compass-license": "^0.1.1",
     "@mongodb-js/compass-query-history": "^2.2.2",
     "@mongodb-js/compass-security": "^0.1.0",
@@ -263,7 +268,7 @@
     "moment": "^2.10.6",
     "mongodb-collection-model": "^1.0.0",
     "mongodb-connection-model": "^12.0.1",
-    "mongodb-data-service": "^11.0.4",
+    "mongodb-data-service": "^11.1.0",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
