--- a/package.json
+++ b/package.json
@@ -295,9 +295,11 @@
     "react-codemirror": "durran/react-codemirror#fix-update",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.6",
     "react-select": "1.0.0-rc.5",
     "react-tooltip": "^3.2.6",
     "react-virtualized": "^9.18.5",
+    "redux": "^3.7.2",
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
