COMPASS-2645: Require Kerberos in the main package.json

--- a/package.json
+++ b/package.json
@@ -214,8 +214,8 @@
     "@mongodb-js/compass-crud": "^4.0.0",
     "@mongodb-js/compass-deployment-awareness": "^5.1.1",
     "@mongodb-js/compass-document-validation": "^7.2.1",
-    "@mongodb-js/compass-instance": "^0.0.2",
     "@mongodb-js/compass-import-export": "^0.1.0",
+    "@mongodb-js/compass-instance": "^0.0.2",
     "@mongodb-js/compass-license": "^0.1.1",
     "@mongodb-js/compass-query-history": "^2.2.2",
     "@mongodb-js/compass-security": "^0.1.0",
@@ -258,6 +258,7 @@
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
+    "kerberos": "^0.0.23",
     "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
