--- a/package.json
+++ b/package.json
@@ -181,8 +181,8 @@
     "@mongodb-js/compass-license": "0.0.3",
     "@mongodb-js/compass-query-history": "2.1.1",
     "@mongodb-js/compass-security": "0.0.5",
-    "@mongodb-js/compass-serverstats": "10.1.0",
     "@mongodb-js/compass-server-version": "1.0.1",
+    "@mongodb-js/compass-serverstats": "10.1.0",
     "@mongodb-js/compass-ssh-tunnel-status": "1.0.4",
     "@mongodb-js/compass-status": "2.0.1",
     "ampersand-collection": "^1.5.0",
@@ -221,6 +221,7 @@
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
+    "kerberos": "^0.0.23",
     "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
