--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -87,8 +87,8 @@ functions:
         # Load environment variables
         . ~/compass_env.sh
 
-        npm cache verify
-        npm install scandir -g
+        # Trying to get rid of scandir npm errors.
+        npm cache clean --force
 
         # Run static analysis on code and project configuration
         npm run check;
