--- a/package.json
+++ b/package.json
@@ -199,9 +199,9 @@
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
     "codemirror-mongodb": "^0.10.2",
     "create-react-class": "^15.5.2",
-    "d3": "^3.5.6",
-    "d3-flextree": "^1.0.3",
-    "d3-timer": "^1.0.3",
+    "d3": "3.5.17",
+    "d3-flextree": "1.0.3",
+    "d3-timer": "1.0.7",
     "debug": "mongodb-js/debug#v2.2.3",
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
@@ -238,7 +238,7 @@
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
     "mongodb-instance-model": "^6.1.0",
-    "mongodb-js-metrics": "^4.0.1",
+    "mongodb-js-metrics": "4.0.1",
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
     "mongodb-query-parser": "^1.0.1",
@@ -268,6 +268,7 @@
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
     "storage-mixin": "^0.8.1",
+    "table-parser": "0.1.3",
     "turf-destination": "^1.2.1",
     "turf-distance": "^1.1.0",
     "turf-point": "^2.0.1",
